# Game-of-Life

./: CMakeLists.txt  README.md
include/: Universe.h  stdafx.h
src/: Universe.cpp  main.cpp
